styles.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    font-family: 'Karla', sans-serif;
    color: #001a17;
    line-height: 1.5;
}

/* ==================
    typography
===================== */
h1, h2, strong {
    font-weight: 700;
}

ul {
    list-style-type: none;
}

p {
    color: #005752;
}

a {
    text-decoration: none;
}

.btn {
    color: #FFF;
    background: #005752;
    padding: 0.4em 1.25em;
    border-radius: 2px;
}

.accent-color {
    color: #005752;
}

.hero-title {
    line-height: 1.3;
}

.footer-copyright {
    color: #b8b8b8;
}

/* ==================
    general layout
===================== */
.main-grid {
    display: grid;
    grid-template-columns: minmax(1em, 1fr) minmax(0px, 500px) minmax(1em, 1fr);
    /* grid-template-areas: 
                        "header-logo header header header header"
                        ". hero hero hero ."
                        ". info-01 info-02 info-03 ."
                        ". footer footer social ."; */
    /* gap: 1em; */
}

/* ==================
    hero area
===================== */
.hero {
    background-image: url(images/plant-hero.jpg);
    padding: 4em 0;
}

.hero > * {
    grid-column: 2 / -2
}

/* ==================
    info area
===================== */

.info {
    padding: 1em 0;
    text-align: center;
    margin-bottom: 1em;
}

.col {
    grid-column: 2 / -2;
}

/* ==================
    footer
===================== */

.footer {
    background: #f5f5f5;
    text-align: center;
    padding: 4em 0;
}

.footer-main {
    grid-column: 2 / -2;
}

.footer-social {
    margin: 0;
    order: -2;
    grid-column: 2 / -2;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-bottom: 2em;
    /* background: red; */
}

.social-item {
    margin-left: -2em;
}

@media (min-width: 700px) {
    .main-grid {
        grid-template-columns: 1fr 1fr 1fr;
    }
    .col {
        grid-column: 1 / 2;
    }
    
}

